<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".NovoUtilizadorActivity">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/novo_utilizador1"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin="20dp"/>
    <EditText
        android:id="@+id/et_NovoUtilizador_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/insira_o_username"
        android:inputType="text">

    </EditText>

    <EditText
        android:id="@+id/et_NovoUtilizador_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/insira_o_password"
        android:inputType="textPassword">

    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"


        >


        <Button
            android:id="@+id/bt_NovoUtilizador_gravar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:minWidth="150dp"
            android:text="@string/gravar"/>

        <Button
            android:id="@+id/bt_NovoUtilizador_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:text="@string/cancelar"/>


    </LinearLayout>


</LinearLayout>